[package]
name = "divine_initiator"
version = "0.1.0"
edition = "2021"

[lib]
name = "guardian_boot"
path = "src/lib.rs"

[[bin]]
name = "mldsa_full_bench"
path = "src/bin/mldsa_full_bench.rs"

[dependencies]
blake3 = { version = "1.8", default-features = false }
fips204 = { version = "0.4.6", features = ["ml-dsa-87"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
